[build-system]
requires = [
    "hatchling >= 1.26"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/civitai_archive_downloader/*.so",
  "src/civitai_archive_downloader/*.dylib",
  "src/civitai_archive_downloader/*.dll",
  "src/civitai_archive_downloader/**/*.py",
  "src/civitai_archive_downloader"
]

[tool.hatch.build.targets.wheel.sources]
"src" = "."

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "civitai_archive_downloader"
requires-python = ">=3.9"
dependencies = [
	"typing",
	"argparse",
	"pytest>=8.4.0",
    "requests",
    "selectolax"
]
description = "Template for creating python projects"
version = "0.0.2"
